<resources>
    <string name="app_name">E-waste warrior</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- Google Maps API Key -->
    <string name="google_maps_api_key">AIzaSyAUMU0wvDp7ymTH-b7GC3X2FDtHDHKZrKk</string>

    <string name="screen_1_title">E-waste warrior</string>
    <string name="screen_1_desc">This application will empower you to save the earth! </string>

    <string name="screen_2_title">Secret Bases</string>
    <string name="screen_2_desc">We will guide you to our secret bases: the recycling points.</string>

    <string name="screen_3_title">DIY Videos</string>
    <string name="screen_3_desc">Explore DIY videos and get inspirations from your alliances!</string>

    <string name="screen_4_title">Green rank</string>
    <string name="screen_4_desc">Continue to recycle and be promoted to higher green rank!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Locations Fragment -->
    <string name="e_waste_title" translatable="true">E-Waste</string>
    <string name="lightning_waste_title" translatable="true">Lightning Waste</string>
    <string name="second_hand_title" translatable="true">Second Hand Goods</string>
    <string name="cash_for_trash_title" translatable="true">Cash For Trash</string>
    
    <!-- MarkerDialogActivity -->
    <string name="waste_deposited_title" translatable="true">Waste Deposited at this Location (kg):</string>
    <string name="waste_new_deposit_title" translatable="true">New Waste Amount Deposited (kg):</string>
    <string name="confirm_waste_btn_title" translatable="true">Confirm</string>
    <string name="get_directions_on_google_maps" translatable="true">Get directions on Google Maps</string>

    <!-- Profile Fragment -->
    <string name="profile_edit_action" translatable="true">Edit Profile</string>
</resources>
