<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:text="@string/waste_deposited_title"
        android:textColor="#fff"
        android:background="#666"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/waste_deposited_tv"
        android:textColor="#fff"
        android:background="#666"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/waste_new_deposit_title"
        android:textColor="#fff"
        android:background="#666"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_waste_deposited_et"
        android:textColor="#fff"
        android:background="#666"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/confirm_waste_deposit_btn"
        android:text="@string/confirm_waste_btn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/google_maps_direction_btn"
        android:text="@string/get_directions_on_google_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>